Correção das imagens em forma reduzidas

--- a/trabDesenhoTecnico/index.html
+++ b/trabDesenhoTecnico/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Visualizador de Imagem — Glass UI</title>
+<title>Visualizador de Imagem</title>
 
 <style>
 /* ------------------------------
@@ -141,7 +141,7 @@ button:disabled {
 
 .result-item img {
     width: auto !important;
-    max-height: 200px;
+    max-height: 300px;
 }
 
 /* ----------- HISTOGRAMAS ----------- */
@@ -167,7 +167,7 @@ canvas {
 
 <!-- CABEÇALHO -->
 <div id="titleSite">
-    <h2>Trabalho de Desenho Técnico — Engenharia da Computação</h2>
+    <h2>Trabalho de Desenho Técnico — 2º termo de Engenharia da Computação</h2>
     <ul>
         <li>Arthur Romero Rossi</li>
         <li>Gabriel Henrique Meneghelli</li>
